--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -444,6 +444,10 @@ padding-bottom: 0;
 
 /* Homepage */
 
+.cta-button {
+	.button (#148c4f, #fff);
+}
+
 .hero {
 position: relative;
 
@@ -456,7 +460,6 @@ position: relative;
 	
 	.cta-button {
 	position: absolute;
-	.button (#148c4f, #fff);
 	left: 1em;
 	margin-top: -1.125em;
 	font-size: 1.25em;
