--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -165,6 +165,7 @@ blockquote {
 strong {
 	font-family: "PTSansBold";
 	font-weight: normal;
+	letter-spacing: 0.05em;
 }
 
 hr {
@@ -322,7 +323,7 @@ input {
 		width: auto;
 		float: right;
 		margin: 1em 0 0.5em;
-		.button(@blue, darken(@blue, 20%));
+		.button(@blue, white);
 		border: 1px solid darken(@blue, 3%);
 		color: white;
 		
