--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -62,6 +62,8 @@ html {
   /* 1 */
 
   -webkit-text-size-adjust: 100%;
+  /* 2 */
+
   -ms-text-size-adjust: 100%;
   /* 2 */
 
@@ -269,6 +271,8 @@ textarea {
   /* 2 */
 
   vertical-align: baseline;
+  /* 3 */
+
   *vertical-align: middle;
   /* 3 */
 
@@ -324,6 +328,8 @@ input[type="radio"] {
   /* 2 */
 
   *height: 13px;
+  /* 3 */
+
   *width: 13px;
   /* 3 */
 
@@ -642,6 +648,7 @@ input[type="submit"] {
   text-decoration: none;
   color: #ffffff;
   background-color: #0030c3;
+  border: 1px solid #002390;
   background-image: -moz-linear-gradient(top, rgba(6, 67, 255, 0), rgba(0, 39, 159, 0.5) 100%);
   /* FF3.6+ */
 
@@ -688,6 +695,9 @@ input[type="submit"]:focus {
 input[type="submit"]:active {
   background-color: #001453;
   border: 1px solid #000820;
+}
+.wpcf7 {
+  clear: both;
 }
 div.wpcf7-response-output {
   border: none;
@@ -1058,6 +1068,7 @@ footer ul {
 .row {
   max-width: 1000px;
   margin: 0 auto;
+  *zoom: 1;
   *zoom: 1;
 }
 .row:before,
