--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -823,6 +823,9 @@ header .row.nav .twocol {
 .hero {
   position: relative;
 }
+.hero .slide {
+  display: none;
+}
 .hero img {
   position: relative;
   display: block;
