--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -456,6 +456,10 @@ padding-bottom: 0;
 .hero {
 position: relative;
 
+	.slide {
+		display: none;
+	}
+
 	img {
 	position: relative;
 	display: block;
