--- a/wp-content/themes/atlanticmontessori/css/style.css
+++ b/wp-content/themes/atlanticmontessori/css/style.css
@@ -452,11 +452,6 @@ p {
   padding: 0;
   margin: 0 0 1.5em;
 }
-p.author {
-  font-family: 'PTSansRegular', Helvetica, serif;
-  font-size: 0.631578947368421em;
-  line-height: 1em;
-}
 p.intro {
   font-family: "PTSerifRegular", Goergia, Times New Roman, serif;
   font-size: 1.5em;
@@ -822,15 +817,28 @@ header .row.nav .twocol {
 }
 .hero {
   position: relative;
+  border-bottom: 4px solid #19ae62;
+  background-color: rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5) inset;
+  -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5) inset;
+  -o-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5) inset;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5) inset;
 }
 .hero .slide {
   display: none;
+}
+.hero h2 {
+  font-family: 'PTSansRegular', Helvetica, serif;
+  font-size: 0.631578947368421em;
+  line-height: 1em;
+  text-shadow: none;
+  color: white;
+  margin: 1em 0 0;
 }
 .hero img {
   position: relative;
   display: block;
   width: 100%;
-  border-bottom: 4px solid #19ae62;
 }
 .hero .cta-button {
   position: absolute;
