--- a/wp-content/themes/atlanticmontessori/less/respond.less
+++ b/wp-content/themes/atlanticmontessori/less/respond.less
@@ -113,12 +113,10 @@ padding-bottom: 3em;
 		position: static;
 		width: auto;
 		padding: 1em 1em 1em 2em;
+		margin-bottom: 0;
 		
-		blockquote {
-		
-			p.author {
-				padding-top: 1em;
-			}
+		.author {
+			padding-top: 1em;
 		}
 	}
 	
