--- a/wp-content/themes/atlanticmontessori/less/style.less
+++ b/wp-content/themes/atlanticmontessori/less/style.less
@@ -107,6 +107,10 @@ margin: 0 0 1.5em;
 	padding: 0;
 	margin-bottom: 1em;
 
+		em {
+			font-family: "PTSerifItalic";
+		}
+
 		strong {
 			font-family: "PTSerifBold";
 			font-weight: normal;
@@ -132,6 +136,7 @@ p {
 	em {
 	font-family: "PTSansItalic";
 	font-style: normal;
+	font-size: 1.05em;
 	}
 }
 
